--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
 							    <ul class="resume-social list-unstyled">
-					                <li class="mb-3"><a class="text-link" href="linkedin.com/in/erick-ramón-ovando-2716a9190" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com</a></li>
+					                <li class="mb-3"><a class="text-link" href="https://linkedin.com/in/erick-ramón-ovando-2716a9190" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com</a></li>
 					                <li class="mb-3"><a class="text-link" href="https://github.com/erickramonovando" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com</a></li>
 							    </ul>
 						    </div><!--//secondary-info-->
